syntax = "proto3";

package rholang_scala_rust_types;

import "RhoTypes.proto";
import "scalapb/scalapb.proto";

option (scalapb.options) = {
  package_name: "coop.rchain.models.rholang_scala_rust_types"
  preserve_unknown_fields: false
};

message CreateRuntimeParams {
	rhoapi.Par mergeableTagName = 1;
	bool initRegistry = 2;
}