/**
 * loosely based on messages defined in models/src/main/protobuf/RhoTypes.proto
 */
 syntax = "proto3";

 package firefly;

 message Name {
	string first = 1;
	string last = 2;
 }

 message Address {
	string street = 1;
	string city = 2;
	string state = 3;
	string zip = 4;
 }

 message Entry {
	Name name = 1;
	Address address = 2;
	string email = 3;
	string phone = 4;
 }

//will either store data or return OptionResult
 message RetrieveContinuation {
	Entry data = 1;
	string match_case = 2;
	bool persistent = 3;
 }

//will either store continuation or return OptionResult
 message CommitContinuation {
	string pattern = 1;
	string continuation = 2;
	bool persistent = 3;
 }

//this is constructed from db data and returned 
 message OptionResult {
	string continuation = 1;
	Entry data = 2;
 }

/** 
	* alias: send -- get or produce
	*/
 message Retrieve {
	string chan = 1;
	Entry data = 2;
	string match_case = 3;
}

/** 
	* alias: receive -- put or consume
	* patterns here refer to Match in RhoTypes.proto
	*/
message Commit {
	repeated string channels = 1;
	repeated string patterns = 2;
	string continuation = 3;
}